--- a/sample/filebeat.yml
+++ b/sample/filebeat.yml
@@ -23,5 +23,8 @@ output.elasticsearch:
 
   bulk_max_size: 0
 
+  username: {{ YOUR EMAIL }}
+  password: {{ YOUR LICENSE }}
+
   protocol: "https"
   ssl.verification_mode: "none"
