revert non-es configs to 90 sec maxBufferDelayInSec

--- a/docker-stack-core.yml
+++ b/docker-stack-core.yml
@@ -48,7 +48,7 @@ services:
       KAFKA_LOG_DIRS: /dashbase/kafka
       KAFKA_LOG_RETENTION_HOURS: 24
       # Change the following to external IP/host to make kafka accessible outside of swarm
-      KAFKA_ADVERTISED_HOST_NAME: localhost # this value needs to be the host machine's private IP address on AWS
+      KAFKA_ADVERTISED_HOST_NAME: kafka # this value needs to be the host machine's private IP address on AWS
       KAFKA_ADVERTISED_PORT: 9094
 
   api:
