--- a/config/dashbase-tables/monitor/config.yml
+++ b/config/dashbase-tables/monitor/config.yml
@@ -25,7 +25,7 @@ dashbase:
     expirationHandler:
       params:
       type: purge
-    numDays: 7
+    numDays: ${RETENTION_NUM_DAYS:-7}
 
   firehose:
       type: kafka_10
@@ -35,6 +35,7 @@ dashbase:
         topic: ${KAFKA_TOPIC}_avro
         partitions: 0
         kafkaProps:
+          compression.type: lz4
           security.protocol: SSL
           ssl.truststore.location: /run/secrets/keystore
           ssl.truststore.password: ${KEYSTORE_PASSWORD}
