--- a/config/dashbase-tables/quickstart/conf/config.yml
+++ b/config/dashbase-tables/quickstart/conf/config.yml
@@ -19,12 +19,12 @@ dashbase:
     url: zk://${ZOOKEEPER_URL}/dashbase/docker/${TABLE_NAME}
 
   indexer:
-    numIndexingThreads: 3
+    numIndexingThreads: ${NUM_INDEXING_THREADS:-3}
     #maxNumConcurrentBuilding: 3
-    maxBufferDelayInSec: 90
+    maxBufferDelayInSec: ${MAX_BUFFER_DELAY_SEC:-90}
 
   retention:
-    numDays: .01
+    numDays: ${RETENTION_NUM_DAYS:-1}
 
   parser:
     type: json
