--- a/kafka-stack.yml
+++ b/kafka-stack.yml
@@ -22,7 +22,7 @@ services:
   kafka:
     image: wurstmeister/kafka:1.0.0
     depends_on:
-      - zookeeper
+      - kafka_zookeeper
     networks:
       - dashbase_backend
     deploy:
