--- a/config/proxy/config.yml
+++ b/config/proxy/config.yml
@@ -1,6 +1,6 @@
 server:
   applicationConnectors:
-    - type: https
+    - type: http
       port: 9200
       keyStorePath: /run/secrets/keystore
       keyStorePassword: ${KEYSTORE_PASSWORD}
@@ -14,12 +14,6 @@ kafka:
     clientId: dashbase
     kafkaProps:
       compression.type: lz4
-      security.protocol: SSL
-      ssl.truststore.location: /run/secrets/keystore
-      ssl.truststore.password: ${KEYSTORE_PASSWORD}
-      ssl.keystore.location: /run/secrets/keystore
-      ssl.keystore.password: ${KEYSTORE_PASSWORD}
-      ssl.key.password: ${KEYSTORE_PASSWORD}
 
 # Specify the output format
 # 'raw': pass the raw input JSON
