--- a/config/dashbase-tables/quickstart/conf/elastic-config.yml
+++ b/config/dashbase-tables/quickstart/conf/elastic-config.yml
@@ -16,13 +16,6 @@ dashbase:
       groupId: ${KAFKA_GROUPID}
       topic: ${KAFKA_TOPIC}
       partitions: "${KAFKA_PARTITIONS}"
-      kafkaProps:
-        security.protocol: SSL
-        ssl.truststore.location: /run/secrets/keystore
-        ssl.truststore.password: ${KEYSTORE_PASSWORD}
-        ssl.keystore.location: /run/secrets/keystore
-        ssl.keystore.password: ${KEYSTORE_PASSWORD}
-        ssl.key.password: ${KEYSTORE_PASSWORD}
 
 
   cluster:
@@ -42,11 +35,8 @@ dashbase:
 
 server:
   applicationConnectors:
-    - type: https
+    - type: http
       port: ${PORT}
-      keyStorePath: /run/secrets/keystore
-      keyStorePassword: ${KEYSTORE_PASSWORD}
-      validateCerts: false
   applicationContextPath: /
   adminContextPath: /admin
   adminConnectors:
