remove https from grafana

--- a/config/grafana/custom.ini
+++ b/config/grafana/custom.ini
@@ -25,7 +25,7 @@
 #################################### Server ####################################
 [server]
 # Protocol (http or https)
-protocol = https
+protocol = http
 
 # The ip address to bind to, empty will bind to all interfaces
 ;http_addr =
@@ -54,9 +54,6 @@ protocol = https
 ;enable_gzip = false
 
 # https certs & key file
-cert_file = /app/cert.pem
-cert_key = /app/key.pem
-
 #################################### Database ####################################
 [database]
 # You can configure the database connection by specifying type, host, name, user and password
